rightCol spacing fixed, no jitter, cleaned up small things.

--- a/my-app/public/demos/styles.css
+++ b/my-app/public/demos/styles.css
@@ -1,4 +1,5 @@
-
+    /* Import Fonts */
+    @import url('https://fonts.googleapis.com/css?family=Lato:700|Open+Sans&display=swap');
 
     /* Root Variables */
     :root {
@@ -22,6 +23,7 @@
         padding: 0;
         background-color: var(--background-color);
         color: #fff;
+        font-family: 'Open Sans', sans-serif;
         line-height: 1.6;
     }
 
